--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 	  <li><a href="http://emberjs.cn">Ember中文官网</a></li>
 	  <li><a href="http://ember-cli.com">ember-cli官网网站</a></li>
 	  <li><a>Ember QQ群 298026365</a></li>
-	  <li><a>私人群 123625217</a></li>
+	  <li><a href="tencent://groupwpa/?subcmd=all&param=7B2267726F757055696E223A3132333632353231372C2274696D655374616D70223A313433343337323836327D0A">私人群 123625217</a></li>
 	</ul>
 
 	<p>感谢老大<a href="https://github.com/towerhe">@towerhe</a>对中文社区的贡献和各位ember coder的支持。</p>
 
 	<p>特别感谢<a href="https://github.com/huangdandan">@huangdandan</a>同学对本文的校验。</p>
 
-	<p>如果发现了文内错误或是不合适的地方，强烈欢迎提交PR，Issue，或者给我发邮件<a href="mailto://yfhj1990@hotmail.com">@yuffiy</a>。</p>
+	<p>如果发现了文内错误或是不合适的地方，强烈欢迎提交PR，Issue，或者QQ上叫我<a href="tencent://message/?uin=631190613">@Yufi</a>。</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/yuffiy">yuffiy</a></p>
